allow user to add and edit answers, save all in database

--- a/app/templates/answer.hbs
+++ b/app/templates/answer.hbs
@@ -8,7 +8,7 @@
     <button class="btn btn-primary" {{action 'saveAnswer'}}>Save</button>
   </form>
 {{else}}
-  <p>{{answer}}</p>
+  <p>{{model.answer}}</p>
 
   <button class="btn btn-primary" {{action 'editAnswer'}}>Edit</button>
 {{/if}}
