--- a/app/templates/answers.hbs
+++ b/app/templates/answers.hbs
@@ -1,3 +1,3 @@
-{{#each answer in this.answers}}
+{{#each answer in model.answers}}
 <li>{{#link-to 'answer' answer.id}}{{answer.answer}}{{/link-to}}</li>
 {{/each}}
