--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,3 +1,5 @@
-<h2 id="title">Woohoo Answers</h2>
+<h1 class="header"> <span class="woohoo">Woohoo! </span> Answers </h1>
 
-{{outlet}}
+<div class='look-pretty' class='container'>
+	{{outlet}}
+</div>
